# OpenForge

./: .gitignore  AGENTS.md  AGENT_PLAN.md  Makefile  OPENANALOG_CURSOR_PROMPTS.md  OPENANALOG_HANDOFF.md  OPENANALOG_MASTER_PLAN.md  OPENFORGE_TRAINING_DAG_HANDOFF.md  README.md  pyproject.toml  setup.sh
.cursor/: hooks.json
.rules/: README.md  claude-cursor-response-contract.md  openforge-evidence-floor.md
PDF/: RS321_datasheet.txt
data/: designs.jsonl  forge_state.json
docs/: CLAUDE_SESSION_EXPORT_2026-06-20.md  CLONE_AUDIT.md  HANDOFF.md  PARKING_LOT.md  SESSION_NOTES.md  STATUS.md  UI_E2E_CHECKLIST.md  VERIFY_BRIEF.md  analog_design_rules.md  semicon-log.md
files/: README.md  attach-diff.ps1  claude-cursor-response-contract.mdc  hooks.json  schematic-layout-skill.md  schematic_geometry.py  schematic_layout.py  standalone_geometry_check.py  standalone_integration_smoke.py  test_schematic_no_tangling.py
logs/: dv_verifier_schematic_closeout.txt  five_category_trace.txt  pytest_battery.txt  pytest_connectivity_floorplan.txt  pytest_gate_summary.txt  pytest_netlist_schematic.txt  pytest_no_tangling.txt  pytest_schem_tail.txt
openanalog/: __init__.py  __main__.py  claude.py  confidence.py  config.py  corpus_stats.py  llm.py  netlist_llm.py  presets.py  product_line.py  use_cases.py
openanalog.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
scripts/: _zerotrust_bsim_capture.py  _zerotrust_ci_fetch.py  _zerotrust_level1_ngspice_capture.py  _zerotrust_seed_fitness_dump.py  analyze_opamp_losers.py  analyze_winners.py  diag_cp.py  (+112 more)
(+140 files in other folders)
